lambdacube-dsl/tests/reject/scope01.lc
main =
    let frame = FrameBuffer (colorImage1 1.0)
    in ScreenOut frame'
